--- a/public/css/index/partials/section-1.css
+++ b/public/css/index/partials/section-1.css
@@ -5,14 +5,30 @@
 /* ===== BOTÕES DE NAVEGAÇÃO DAS CATEGORIAS ===== */
 
 .categorias-container {
-    position: relative;
+    overflow-y: hidden;
+    overflow-x: auto;
     width: 100%;
+}
+
+
+.categorias-container::-webkit-scrollbar {
+    width: 10px;
+}
+
+.categorias-container::-webkit-scrollbar-thumb {
+    background: var(--gray-75);
+    border-radius: 10px;
+}
+
+.categorias-container::-webkit-scrollbar-track {
+    background: var(--gray-100);
 }
 
 .categorias {
     scroll-behavior: smooth;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* IE and Edge */
+    width: 100%;
 }
 
 .categorias::-webkit-scrollbar {
