--- a/views/freelancers/freelancers.ejs
+++ b/views/freelancers/freelancers.ejs
@@ -7,6 +7,12 @@
   <link rel="stylesheet" href="/css/freelancers/freelancers.css" />
 </head>
 <body>
+  <div class="preloader-container" id="preloader">
+    <div class="loader">
+      <img src="/assets/vetors/loader.gif" alt="" style="width: 150px; height: 100%;">
+  </div>
+  </div>
+  <script src="/js/preloader.js"></script>
   <section class="section-1 pd-t-2 pd-x-2">
     <div class="pd-2 bg-gray-75 flex flex-row gap-2 rounded-md mg-0 flex-wrap justify-center items-center">
       <!-- Category Dropdown -->
