--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,17 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Projetos</title>
     <link rel="stylesheet" href="/css/index/index.css" />
+
+    <style>
+        .preloader-container {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: rgba(0, 0, 0, 0.5);
+          backdrop-filter: blur(40px);
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          z-index: 9999;
+          transition: opacity 0.5s ease;
+        }
+      </style>
 </head>
 
 <body>
+    <div class="preloader-container" id="preloader">
+        <div class="loader">
+            <img src="/assets/vetors/loader.gif" alt="" style="width: 150px; height: 100%;">
+        </div>
+      </div>
 
     <section class="section-1 pd-t-5">
-        <div class="categorias-container">
-            <div class="flex rounded-lg categorias bg-gray-50 gap-1 pd-1 overflow-hidden">
-                <div class="pd-2 noWrap cardCategoria bg-gray-100 rounded-xl">
-                    <h1 class="text-lg font-bold mg-0">Design Gráfico</h1>
-                    <p class="mg-0 text-xs text-gray-25">1.100 projetos</p>
-                </div>
+        <div class="categorias-container bg-gray-50 rounded-xl">
+            <div class="flex rounded-lg categorias bg-gray-50 gap-1 pd-1">
             </div>
 
             <!-- Botões de navegação -->
@@ -488,6 +506,7 @@
         });
     </script>
 
+    <script src="js/preloader.js"></script>
 </body>
 
 </html>
