--- a/views/proposals/proposals.ejs
+++ b/views/proposals/proposals.ejs
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+    <div class="preloader-container" id="preloader">
+        <div class="loader">
+          <img src="/assets/vetors/loader.gif" alt="" style="width: 150px; height: 100%;">
+      </div>
+      </div>
+      <script src="/js/preloader.js"></script>
     <section class="section2">
         <div class="container-filter h-full  bg-background">
             <div class="filtro h-full">
