como a funçao de abrir o modal funcionaria sem o modulo js/  aguardando a estilização do modal

--- a/views/profile/profile.ejs
+++ b/views/profile/profile.ejs
@@ -180,6 +180,7 @@
     });
   }
 </script>
+<script type="module" src="/js/perfil.js"></script>
 <script src="/js/preloader.js"></script>
 </body>
 </html>
